# NovaLabs

./: .gitleaks.toml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  commitlint.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  contract_audit.yml  doc_fix.yml  feature_request.yml  security.yml
.github/workflows/: CI.yaml  load-test.yml  secrets-scan.yml  stryker-weekly.yml
.semgrep/: reentrancy.yml
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  stryker.conf.js  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
contracts/: .gitignore  Cargo.toml
contracts/access_control/: Cargo.toml  README.md
contracts/common_types/: README.md
contracts/manage_hub/: README.md
contracts/membership_token/: Cargo.toml  ReadMe.md
contracts/membership_token/src/: lib.rs  test.rs
contracts/payment_escrow/: Cargo.toml  README.md
contracts/resource_credits/: README.md
contracts/tests/: integration.rs
contracts/workspace_booking/: Cargo.toml  README.md
docs/: PERMISSIONS.md  SECRETS.md  THREAT-MODEL.md  onboarding-guide.md
docs/architecture/: system-context.md
frontend/: README.md  middleware.ts
frontend/app/: README.md  layout.tsx  page.tsx
frontend/components/: README.md
frontend/hooks/: README.md  use-login.ts
frontend/lib/: README.md  apiClient.ts  seo.ts  storage.ts  utils.ts
frontend/providers/: Providers.tsx  README.md  ReactQueryProvider.tsx  authInitializer.tsx
public/: sitemap.xml
scripts/: generate_permissions_docs.py
(+199 files in other folders)
